--- a/generator/templates/readme.tmpl
+++ b/generator/templates/readme.tmpl
@@ -59,6 +59,9 @@ subprojects, and resolve cross-subproject technical issues and decisions.
     - [@kubernetes/{{.Name}}](https://github.com/orgs/kubernetes/teams/{{.Name}}) {{- if .Description }} - {{.Description}} {{- end}}
 {{- end }}
 {{- end }}
+{{- if .Contact.Liaison.Name }}
+- Steering Committee Liaison: {{.Contact.Liaison.Name}} (**[@{{.Contact.Liaison.GitHub}}](https://github.com/{{.Contact.Liaison.GitHub}})**)
+{{- end }}
 
 {{- if .Subprojects }}
 
@@ -73,7 +76,7 @@ The following [subprojects][subproject-definition] are owned by sig-{{.Label}}:
 {{- end }}
 - **Owners:**
 {{- range .Owners }}
-  - {{.}}
+  - [{{trimSuffix (orgRepoPath .) "/OWNERS"}}]({{githubURL .}})
 {{- end }}
 {{- if .Contact }}
 - **Contact:**
@@ -106,3 +109,4 @@ The following [subprojects][subproject-definition] are owned by sig-{{.Label}}:
 {{- end }}
 
 [subproject-definition]: https://github.com/kubernetes/community/blob/master/governance.md#subprojects
+
