--- a/generator/templates/readme.tmpl
+++ b/generator/templates/readme.tmpl
@@ -1,12 +1,44 @@
 {{- template "header" }}
-# {{.Name}} Special Interest Group
+Operator Framework Community
+
+Welcome to the Operator Framework community repo, which contains the Operator
+Framework process, charter, and coordination documents.
+
+## Get involved
+
+Please have a look at our [Code of Conduct](TODOlink) and join us!
+
+* Kubernetes Slack ([Get invite](https://slack.k8s.io))
+  * Users: [#kubernetes-operators](https://kubernetes.slack.com/messages/kubernetes-operators)
+  * SDK Development: [#operator-sdk-dev](https://kubernetes.slack.com/messages/operator-sdk-dev)
+  * OLM Development: [#olm-dev](https://kubernetes.slack.com/messages/olm-dev)
+* [Operator Framework on Google Groups](https://groups.google.com/forum/#!forum/operator-framework)
+* [Operator Lifecycle Manager Development on Google Groups](https://groups.google.com/forum/#!forum/operator-framework-olm-dev)
+* [Operator Framework Commons SIG](https://commons.openshift.org/sig/OpenshiftOperators.html)
+
+## Working Groups
+
+Most Operator Framework community activity is organized into Working Groups;
+each may operate a little differently depending on their needs and workflow.
+
+{{ range .WorkingGroups}}
+## {{.Name}} Working Group
 
 {{ .MissionStatement }}
 {{- if .CharterLink }}
-The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}} Special Interest Group.
+
+The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}} Working Group.
+{{ end }}
+{{- if .StakeholderSIGs }}
+
+### Stakeholder SIGs
+{{- range .StakeholderSIGs }}
+
+* SIG {{.}}
+{{- end }}
 {{ end }}
 {{ if .Meetings -}}
-## Meetings
+### Meetings
 {{- range .Meetings }}
 * {{.Description}}: [{{.Day}}s at {{.Time}} {{.TZ}}]({{.URL}}) ({{.Frequency}}). [Convert to your timezone](http://www.thetimezoneconverter.com/?t={{.Time}}&tz={{.TZ | tzUrlEncode}}).
 {{- if .ArchiveURL }}
@@ -16,42 +48,27 @@ The [charter]({{.CharterLink}}) defines the scope and governance of the {{.Name}
   * [Meeting recordings]({{.RecordingsURL}}).
 {{- end }}
 {{- end }}
-
 {{- end }}
 {{- if .Leadership }}
-
-## Leadership
 {{- if .Leadership.Chairs }}
-
-### Chairs
-The Chairs of the SIG run operations and processes governing the SIG.
+### Organizers
 {{ range .Leadership.Chairs }}
 * {{.Name}} (**[@{{.GitHub}}](https://github.com/{{.GitHub}})**){{if .Company}}, {{.Company}}{{end}}
 {{- end }}
 {{- end }}
-{{- if .Leadership.TechnicalLeads }}
-
-### Technical Leads
-The Technical Leads of the SIG establish new subprojects, decommission existing
-subprojects, and resolve cross-subproject technical issues and decisions.
-{{ range .Leadership.TechnicalLeads }}
-* {{.Name}} (**[@{{.GitHub}}](https://github.com/{{.GitHub}})**){{if .Company}}, {{.Company}}{{end}}
-{{- end }}
-{{- end }}
 {{- if .Leadership.EmeritusLeads }}
-
-## Emeritus Leads
+### Emeritus Organizers
 {{ range .Leadership.EmeritusLeads }}
 * {{.Name}} (**[@{{.GitHub}}](https://github.com/{{.GitHub}})**)
 {{- end }}
 {{- end }}
 {{- end }}
 
-## Contact
-- Slack: [#{{.Contact.Slack}}](https://kubernetes.slack.com/messages/{{.Contact.Slack}})
+### Contact
+- Slack: [##{{.Contact.Slack}}](https://kubernetes.slack.com/messages/{{.Contact.Slack}})
 - [Mailing list]({{.Contact.MailingList}})
 {{- if .Label }}
-- [Open Community Issues/PRs](https://github.com/kubernetes/community/labels/sig%2F{{.Label}})
+- [Open Community Issues/PRs](https://github.com/kubernetes/community/labels/wg%2F{{.Label}})
 {{- end }}
 {{- if .Contact.GithubTeams }}
 - GitHub Teams:
@@ -62,51 +79,4 @@ subprojects, and resolve cross-subproject technical issues and decisions.
 {{- if .Contact.Liaison.Name }}
 - Steering Committee Liaison: {{.Contact.Liaison.Name}} (**[@{{.Contact.Liaison.GitHub}}](https://github.com/{{.Contact.Liaison.GitHub}})**)
 {{- end }}
-
-{{- if .Subprojects }}
-
-## Subprojects
-
-The following [subprojects][subproject-definition] are owned by sig-{{.Label}}:
-
-{{- range .Subprojects }}
-### {{.Name}}
-{{- if .Description }}
-{{ trimSpace .Description }}
-{{- end }}
-- **Owners:**
-{{- range .Owners }}
-  - [{{trimSuffix (orgRepoPath .) "/OWNERS"}}]({{githubURL .}})
-{{- end }}
-{{- if .Contact }}
-- **Contact:**
-{{- if .Contact.Slack }}
-  - Slack: [#{{.Contact.Slack}}](https://kubernetes.slack.com/messages/{{.Contact.Slack}})
-{{- end }}
-{{- if .Contact.MailingList }}
-  - [Mailing List]({{.Contact.MailingList}})
-{{- end }}
-{{- if .Contact.GithubTeams }}
-  - GitHub Teams: 
-{{- range .Contact.GithubTeams }}
-    - [@kubernetes/{{.Name}}](https://github.com/orgs/kubernetes/teams/{{.Name}}) {{- if .Description }} - {{.Description}}{{- end}}
-{{- end }}
-{{- end }}
-{{- end }}
-{{- if .Meetings }}
-- **Meetings:**
-{{- range .Meetings }}
-  - {{.Description}}: [{{.Day}}s at {{.Time}} {{.TZ}}]({{.URL}}) ({{.Frequency}}). [Convert to your timezone](http://www.thetimezoneconverter.com/?t={{.Time}}&tz={{.TZ | tzUrlEncode}}).
-{{- if .ArchiveURL }}
-    - [Meeting notes and Agenda]({{.ArchiveURL}}).
-{{- end }}
-{{- if .RecordingsURL }}
-    - [Meeting recordings]({{.RecordingsURL}}).
-{{- end }}
-{{- end }}
-{{- end }}
-{{- end }}
-{{- end }}
-
-[subproject-definition]: https://github.com/kubernetes/community/blob/master/governance.md#subprojects
-
+{{ end }}
